--- a/DevX-Project/package.json
+++ b/DevX-Project/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "firebase": "^11.0.2",
     "mongodb": "^6.10.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
