--- a/DevX-Project/package.json
+++ b/DevX-Project/package.json
@@ -15,7 +15,8 @@
     "mongodb": "^6.10.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.28.0"
+    "react-router-dom": "^6.28.0",
+    "unique-username-generator": "^1.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
