--- a/Server/package.json
+++ b/Server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.21.1",
-    "mongodb": "^6.10.0"
+    "mongodb": "^6.10.0",
+    "unique-username-generator": "^1.3.0"
   }
 }
