added api calls for cafes and simple reactmodal

--- a/DevX-Project/.env
+++ b/DevX-Project/.env
@@ -5,3 +5,4 @@ VITE_FIREBASE_PROJECT_ID =  "devx-project-50405"
 VITE_FIREBASE_STORAGE_BUCKET =  "devx-project-50405.firebasestorage.app"
 VITE_FIREBASE_SENDER_ID =  "986312961678"
 VITE_FIREBASE_APP_ID =  "1:986312961678:web:672068da11dec3b9cca3df"
+VITE_APIKEY = "ec170df929814c938c77a4823faddd7f"
