--- a/DevX-Project/package.json
+++ b/DevX-Project/package.json
@@ -15,6 +15,7 @@
     "mongodb": "^6.10.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.28.0",
     "socket.io-client": "^4.8.1",
     "unique-username-generator": "^1.3.0"
