--- a/DevX-Project/package.json
+++ b/DevX-Project/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.2.0",
     "axios": "^1.7.7",
     "firebase": "^11.0.2",
     "mongodb": "^6.10.0",
