--- a/DevX-Project/package.json
+++ b/DevX-Project/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^6.2.0",
     "aws-sdk": "^2.1692.0",
     "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
     "firebase": "^11.0.2",
     "mongodb": "^6.10.0",
     "react": "^18.3.1",
