--- a/DevX-Project/package.json
+++ b/DevX-Project/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.2.0",
+    "@react-spring/web": "^9.7.5",
     "aws-sdk": "^2.1692.0",
     "axios": "^1.7.9",
     "firebase": "^11.0.2",
@@ -19,6 +20,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
+    "react-tinder-card": "^1.6.4",
     "socket.io-client": "^4.8.1",
     "unique-username-generator": "^1.3.0"
   },
