--- a/DevX-Project/.env
+++ b/DevX-Project/.env
@@ -6,3 +6,4 @@ VITE_FIREBASE_STORAGE_BUCKET =  "devx-project-50405.firebasestorage.app"
 VITE_FIREBASE_SENDER_ID =  "986312961678"
 VITE_FIREBASE_APP_ID =  "1:986312961678:web:672068da11dec3b9cca3df"
 VITE_APIKEY = "ec170df929814c938c77a4823faddd7f"
+VITE_ADDRESS_APIKEY = "prj_live_pk_82edad404bea8ca5b2cccdf98595df5b2d9cbd67"
