--- a/DevX-Project/.env
+++ b/DevX-Project/.env
@@ -7,3 +7,4 @@ VITE_FIREBASE_SENDER_ID =  "986312961678"
 VITE_FIREBASE_APP_ID =  "1:986312961678:web:672068da11dec3b9cca3df"
 VITE_APIKEY = "ec170df929814c938c77a4823faddd7f"
 VITE_ADDRESS_APIKEY = "prj_live_pk_82edad404bea8ca5b2cccdf98595df5b2d9cbd67"
+VITE_HEROKU_SERVER = "https://fierce-citadel-77900-969c3a8f8223.herokuapp.com"
