Add heroku port

--- a/DevX-Project/.env
+++ b/DevX-Project/.env
@@ -8,3 +8,4 @@ VITE_FIREBASE_APP_ID =  "1:986312961678:web:672068da11dec3b9cca3df"
 VITE_APIKEY = "ec170df929814c938c77a4823faddd7f"
 VITE_ADDRESS_APIKEY = "prj_live_pk_82edad404bea8ca5b2cccdf98595df5b2d9cbd67"
 VITE_HEROKU_SERVER = "https://fierce-citadel-77900-969c3a8f8223.herokuapp.com"
+VITE_HEROKU_SERVERCHAT = "https://secret-ocean-18840-8755a33ecbaf.herokuapp.com"
